--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "firebase": "^10.7.2",
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
+    "highlight.js": "^11.9.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
@@ -22,6 +23,7 @@
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
+    "react-syntax-highlighter": "^15.5.0",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
