--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
     "highlight.js": "^11.9.0",
+    "moment": "^2.30.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
