--- a/api/package.json
+++ b/api/package.json
@@ -5,15 +5,16 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon api/index.js",
-    "start": "node api/index.js",
-    "build": "npm install && cd client && npm install && npm run build"
+    "dev": "nodemon",
+    "start": "node ./dist/index.js",
+    "build": "npm install"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
