--- a/api/package.json
+++ b/api/package.json
@@ -2,6 +2,7 @@
   "name": "mern_blog_app",
   "version": "1.0.0",
   "main": "./src/index.js",
+  "type": "module",
   "scripts": {
     "dev": "nodemon",
     "start": "node ./dist/index.js",
